--- a/extension/skin/classic/firebug.css
+++ b/extension/skin/classic/firebug.css
@@ -151,10 +151,10 @@
     color: #FFFFFF;
 }
 
-.fbsearch-textbox[status='wraparound']{
-    background-image:url(chrome://global/skin/icons/wrap.png);
-    background-position: 98% center;
-    background-repeat: no-repeat
+.fbsearch-textbox[status="wraparound"] {
+    background-image: url(chrome://global/skin/icons/wrap.png);
+    background-position: -moz-calc(100% - 5px) center;
+    background-repeat: no-repeat;
 }
 
 .fbsearch-textbox {
