[1.8] Renamed Large Command Line to Command Editor according to the terminology 5 fails, 4 unrelated: http://getfirebug.com/testresults/?userheaderid=1941192b833199024031e8e3ee66dc04
http://code.google.com/p/fbug/source/detail?r=11301

--- a/extension/content/firebug/firebug.css
+++ b/extension/content/firebug/firebug.css
@@ -13,8 +13,8 @@ window[chromehidden~="toolbar"] #fbToolbar {
     background-color: -moz-dialog;
 }
 
-#fbLargeCommandLine {
-    -moz-binding: url("firefox/bindings.xml#largeCommandLine");
+#fbCommandEditor {
+    -moz-binding: url("firefox/bindings.xml#commandEditor");
 }
 
 .fbCommandLineCompletionPanel {
