--- a/extension/skin/classic/mac/window.css
+++ b/extension/skin/classic/mac/window.css
@@ -5,7 +5,7 @@
     padding-bottom: 2px;
 }
 
-#fbCommandToggleSmall,
-#fbCommandToggleLarge {
+#fbToggleCommandLine,
+#fbToggleCommandEditor {
     width: 48px;
 }
