--- a/extension/skin/classic/html.css
+++ b/extension/skin/classic/html.css
@@ -107,7 +107,10 @@
     background-color: #EEEEEE;
 }
 
-.nodeBox:-moz-any(.highlightOpen, .open) > :-moz-any(.nodeCloseLabel, .nodeChildBox) {
+.nodeBox.highlightOpen > .nodeCloseLabel,
+.nodeBox.highlightOpen > .nodeChildBox,
+.nodeBox.open > .nodeCloseLabel,
+.nodeBox.open > .nodeChildBox {
     display: block;
 }
 
@@ -169,7 +172,9 @@
 /* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */
 
 .nodeBox.mutated > .nodeLabel,
-:-moz-any(.nodeAttr, .nodeValue.mutated, .nodeText).mutated,
+.nodeAttr.mutated,
+.nodeValue.mutated,
+.nodeText.mutated,
 .nodeBox.mutated > .nodeText {
     background-color: #EFFF79;
     color: #FF0000 !important;
@@ -191,7 +196,7 @@
     padding-left: 0;
 }
 
-.soloElement > .nodeBox {
+.soloElement > .nodeBox  {
     padding-left: 0;
 }
 
@@ -211,13 +216,18 @@
     display: none;
 }
 
-.breakpointCode :-moz-any(.nodeBox.containerNodeBox, .nodeLabel) {
+.breakpointCode .nodeBox.containerNodeBox,
+.breakpointCode .nodeLabel {
     padding-left: 0px;
     margin-left: 0px;
     font-family: monospace !important;
 }
 
-.breakpointCode :-moz-any(.nodeTag, .nodeAttr, .nodeText, .nodeValue, .nodeLabel) {
+.breakpointCode .nodeTag,
+.breakpointCode .nodeAttr,
+.breakpointCode .nodeText,
+.breakpointCode .nodeValue,
+.breakpointCode .nodeLabel {
     color: DarkGreen !important;
 }
 
