--- a/extension/skin/classic/net.css
+++ b/extension/skin/classic/net.css
@@ -131,13 +131,20 @@
 /************************************************************************************************/
 /* Column visibility */
 
-.netTable[hiddenCols~=netHrefCol] TD:-moz-any(#netHrefCol, .netHrefCol),
-.netTable[hiddenCols~=netStatusCol] TD:-moz-any(#netStatusCol, .netStatusCol),
-.netTable[hiddenCols~=netDomainCol] TD:-moz-any(#netDomainCol, .netDomainCol),
-.netTable[hiddenCols~=netSizeCol] TD:-moz-any(#netSizeCol, .netSizeCol),
-.netTable[hiddenCols~=netTimeCol] TD:-moz-any(#netTimeCol, .netTimeCol),
-.netTable[hiddenCols~=netLocalAddressCol] TD:-moz-any(#netLocalAddressCol, .netLocalAddressCol),
-.netTable[hiddenCols~=netRemoteAddressCol] TD:-moz-any(#netRemoteAddressCol, .netRemoteAddressCol) {
+.netTable[hiddenCols~=netHrefCol] TD[id="netHrefCol"],
+.netTable[hiddenCols~=netHrefCol] TD.netHrefCol,
+.netTable[hiddenCols~=netStatusCol] TD[id="netStatusCol"],
+.netTable[hiddenCols~=netStatusCol] TD.netStatusCol,
+.netTable[hiddenCols~=netDomainCol] TD[id="netDomainCol"],
+.netTable[hiddenCols~=netDomainCol] TD.netDomainCol,
+.netTable[hiddenCols~=netSizeCol] TD[id="netSizeCol"],
+.netTable[hiddenCols~=netSizeCol] TD.netSizeCol,
+.netTable[hiddenCols~=netTimeCol] TD[id="netTimeCol"],
+.netTable[hiddenCols~=netTimeCol] TD.netTimeCol,
+.netTable[hiddenCols~=netLocalAddressCol] TD[id="netLocalAddressCol"],
+.netTable[hiddenCols~=netLocalAddressCol] TD.netLocalAddressCol,
+.netTable[hiddenCols~=netRemoteAddressCol] TD[id="netRemoteAddressCol"],
+.netTable[hiddenCols~=netRemoteAddressCol] TD.netRemoteAddressCol {
     display: none;
 }
 
@@ -404,9 +411,14 @@
 /************************************************************************************************/
 /* If coming from BF cache (no network activity) */
 
-.netRow.fromBFCache :-moz-any(netLabel, .netBlockingBar, .netResolvingBar, .netConnectingBar,
-  .netSendingBar, .netWaitingBar, .netReceivingBar) {
-      opacity: 0.5;
+.netRow.fromBFCache .netLabel,
+.netRow.fromBFCache .netBlockingBar,
+.netRow.fromBFCache .netResolvingBar,
+.netRow.fromBFCache .netConnectingBar,
+.netRow.fromBFCache .netSendingBar,
+.netRow.fromBFCache .netWaitingBar,
+.netRow.fromBFCache .netReceivingBar {
+    opacity: 0.5;
 }
 
 .netRow.fromBFCache .netHrefLabel {
@@ -433,7 +445,7 @@
 }
 
 .timeInfoTipSeparator span {
-    white-space: pre-wrap;
+    white-space:pre-wrap;
 }
 
 .timeInfoTipBar,
@@ -785,13 +797,15 @@ body[resizingHtmlPreview="true"] .netInfoHtmlPreview {
     padding-bottom: 3px;
 }
 
-.useA11y .panelNode-net :-moz-any(.a11yFocus, .focusRow):focus {
+.useA11y .panelNode-net .a11yFocus:focus,
+.useA11y .panelNode-net .focusRow:focus {
     outline-offset: -2px;
     background-color: #FFFFD6 !important;
 }
 
 .useA11y .panelNode-net .netHeaderCell:focus,
-.useA11y .panelNode-net :focus :-moz-any(.netHeaderCell, .netReceivingBar),
+.useA11y .panelNode-net :focus .netHeaderCell,
+.useA11y .panelNode-net :focus .netReceivingBar,
 .useA11y .netSummaryRow :focus .netBar,
 .useA11y .netSummaryRow:focus .netBar {
     background-color: #FFFFD6;
