[1.9][&1.8] Replaced striped background for infotips by a checkerboard one
http://code.google.com/p/fbug/source/detail?r=11477

--- a/extension/skin/classic/css.css
+++ b/extension/skin/classic/css.css
@@ -149,11 +149,13 @@
  }
 
 .infoTipColorBox {
-    background-image: -moz-repeating-linear-gradient(
-        left top -45deg,
-        #A0A0A0,
-        #A0A0A0 5px,
-        #C8C8C8 5px,
-        #C8C8C8 10px
-    );
+    background-color: #C8C8C8;
+    background-image:
+        -moz-linear-gradient(45deg, #A0A0A0 25%, transparent 25%),
+        -moz-linear-gradient(-45deg, #A0A0A0 25%, transparent 25%),
+        -moz-linear-gradient(45deg, transparent 75%, #A0A0A0 75%),
+        -moz-linear-gradient(-45deg, transparent 75%, #A0A0A0 75%);
+    -moz-background-size: 16px 16px;
+    background-size: 16px 16px;
+    background-position:0 0, 8px 0, 8px -8px, 0px 8px;
 }
