[1.9][&1.8] Issue 4728 (Commandline autocomplete is ugly on MacOS) http://code.google.com/p/fbug/issues/detail?id=4728
http://code.google.com/p/fbug/source/detail?r=11514

--- a/extension/skin/classic/mac/firebug.css
+++ b/extension/skin/classic/mac/firebug.css
@@ -16,6 +16,7 @@
 #fbCommandArrow,
 #fbCommandLine,
 #fbCommandEditor,
+#fbCommandLineCompletion,
 .fbCommandLineCompletions {
     font-family: Monaco, monospace;
 }
