--- a/extension/skin/classic/mac/firebug.css
+++ b/extension/skin/classic/mac/firebug.css
@@ -327,36 +327,39 @@ panelTab[selected="true"] > panelTabMenu {
     display: none !important;
 }
 
-
 .toolbar-text-button:hover:not([disabled="true"]),
 .toolbar-text-menubutton:hover:not([disabled="true"]) {
-    background: #999;
-    box-shadow: inset rgba(60, 60, 60, 0.15) 0 -1px 3px, inset #111 0 1px 3px, inset rgba(60, 60, 60, 0.1) 0 1px 2px, 0 1px rgba(244, 244, 244, .4);
+    background: #999999;
+    box-shadow:
+        inset rgba(60, 60, 60, 0.15) 0 -1px 3px,
+        inset #111111 0 1px 3px,
+        inset rgba(60, 60, 60, 0.1) 0 1px 2px,
+        0 1px rgba(244, 244, 244, 0.4);
 }
 
 .toolbar-text-button:hover:active:not([disabled="true"]),
 .toolbar-text-menubutton:hover:active:not([disabled="true"]) {
-    background: #666;
+    background: #666666;
 }
 
 .toolbar-text-button:hover:not([disabled="true"]) > .toolbarbutton-text,
 .toolbar-text-menubutton:hover:not([disabled="true"]) > .toolbarbutton-menu-dropmarker,
 .toolbar-text-menubutton:hover:not([disabled="true"]) > .toolbarbutton-text {
     color: #FFFFFF;
-    text-shadow: 1px 1px rgba(0, 0, 0, .4);
+    text-shadow: 1px 1px rgba(0, 0, 0, 0.4);
 }
 
 .toolbar-text-button:hover:active:not([disabled="true"]) > .toolbarbutton-text,
 .toolbar-text-menubutton:hover:active:not([disabled="true"]) > .toolbarbutton-menu-dropmarker,
 .toolbar-text-menubutton:hover:active:not([disabled="true"]) > .toolbarbutton-text {
     color: #FFFFFF;
-    text-shadow: 1px 1px rgba(0, 0, 0, .7);
+    text-shadow: 1px 1px rgba(0, 0, 0, 0.7);
 }
 
 .toolbar-text-button[checked="true"]:not([disabled="true"]),
 .toolbar-text-menubutton[open="true"]:not([disabled="true"]) {
-    text-shadow: 0 1px rgba(255, 255, 255, .4);
-    background-color: #ccc;
+    text-shadow: 0 1px rgba(255, 255, 255, 0.4);
+    background-color: #CCCCCC;
 }
 
 .toolbar-text-menubutton:hover:active:not([disabled="true"]) > .toolbarbutton-text,
@@ -365,10 +368,10 @@ panelTab[selected="true"] > panelTabMenu {
 }
 
 .toolbar-text-button > .toolbarbutton-text {
-    color: #333;
+    color: #333333;
 }
 .toolbar-text-button[checked="true"] > .toolbarbutton-text {
-    color: #000;
+    color: #000000;
 }
 
 .toolbar-text-button .toolbarbutton-text,
