[1.9] Issue 3754: Make context menu operations on DOM Panel clear by adding a border on mouseover
http://code.google.com/p/fbug/source/detail?r=11609

--- a/extension/skin/classic/dom.css
+++ b/extension/skin/classic/dom.css
@@ -83,6 +83,10 @@
     text-decoration: underline;
 }
 
+.panelNode-dom .memberRow:hover {
+    background-color: #EFEFEF;
+}
+
 /* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */
 
 .userLabel {
