[1.9][&1.8] Issue 4779 (Incorrect file name in Location Menu, if source is just a path) http://code.google.com/p/fbug/issues/detail?id=4779
http://code.google.com/p/fbug/source/detail?r=11619

--- a/extension/skin/classic/firebug.css
+++ b/extension/skin/classic/firebug.css
@@ -250,6 +250,10 @@ textbox[type="fbSearchBox"] > panel {
     max-width: none;
 }
 
+.fbInlineItem {
+    font-style: italic;
+}
+
 /************************************************************************************************/
 /* Firebug toolbar buttons */
 
