[1.9] Improvement for: Issue 3754:Make context menu operations on DOM Panel clear by adding a border on mouseover
http://code.google.com/p/fbug/source/detail?r=11620

--- a/extension/skin/classic/dom.css
+++ b/extension/skin/classic/dom.css
@@ -10,7 +10,7 @@
 }
 
 .memberValueCell {
-    padding: 1px 0 1px 5px;
+    padding: 2px 0 2px 5px;
     display: block;
     overflow: hidden;
 }
@@ -85,6 +85,10 @@
 
 .panelNode-dom .memberRow:hover {
     background-color: #EFEFEF;
+}
+
+.panelNode-dom .memberRow td {
+    border-bottom: 1px solid #EFEFEF;
 }
 
 /* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */
@@ -197,4 +201,3 @@
 .domTable .objectBox-errorMessage .errorTitle {
     display: inline;
 }
-
