[1.9][&1.8] Issue 4801: 'Show BF Cache Responses' option does not work
http://code.google.com/p/fbug/source/detail?r=11722

--- a/extension/skin/classic/net.css
+++ b/extension/skin/classic/net.css
@@ -415,6 +415,14 @@
 /************************************************************************************************/
 /* If coming from BF cache (no network activity) */
 
+.netTable .netRow.fromBFCache {
+    visibility: collapse;
+}
+
+.netTable.showBFCacheResponses .netRow.fromBFCache {
+    visibility: visible;
+}
+
 .netRow.fromBFCache .netLabel,
 .netRow.fromBFCache .netBlockingBar,
 .netRow.fromBFCache .netResolvingBar,
