[1.9][&1.8] Fixed display of source links
http://code.google.com/p/fbug/source/detail?r=11735

--- a/extension/skin/classic/console.css
+++ b/extension/skin/classic/console.css
@@ -457,7 +457,8 @@
 
 /*****************************************************************************************/
 
-.panelNode.searching .logRow {
+.panelNode.searching .logRow,
+.panelNode.searching .logRow-group > .objectLink {
     display: none;
 }
 
