[1.8] Put Firebug inside a frame (<browser> element) (known to solve issues 4720 and 4804).
http://code.google.com/p/fbug/source/detail?r=11754

--- a/extension/content/firebug/firebug.css
+++ b/extension/content/firebug/firebug.css
@@ -7,6 +7,10 @@ window[chromehidden~="toolbar"] #fbToolbar {
    display: -moz-box;
 }
 
+#fbMainContainer {
+    height: 270px;
+}
+
 #fbContentBox {
     -moz-binding: url("firefox/bindings.xml#initializer");
     height: 270px;
