[1.9] small issues caused by Firebug being inside a frame
http://code.google.com/p/fbug/source/detail?r=11811

--- a/extension/content/firebug/firebug.css
+++ b/extension/content/firebug/firebug.css
@@ -7,7 +7,7 @@ window[chromehidden~="toolbar"] #fbToolbar {
    display: -moz-box;
 }
 
-#fbMainContainer {
+#fbMainFrame {
     height: 270px;
 }
 
