[1.9][&1.8] Toolbar buttons text color needs to indicate their state when they are disabled
http://code.google.com/p/fbug/source/detail?r=11847

--- a/extension/skin/classic/win/firebug.css
+++ b/extension/skin/classic/win/firebug.css
@@ -41,6 +41,11 @@
     color: #000000;
 }
 
+.toolbar-text-button[disabled="true"],
+.toolbar-text-menubutton[disabled="true"] {
+    color: graytext;
+}
+
 .toolbar-text-button[checked="true"] {
     padding: 3px 6px !important;
 }
