[1.9] Issue 4905: Show the "Connection" header in the network/headers part
http://code.google.com/p/fbug/source/detail?r=12089

--- a/extension/skin/classic/net.css
+++ b/extension/skin/classic/net.css
@@ -695,6 +695,10 @@
     color: #565656;
 }
 
+.netInfoCachedResponseHeadersBody {
+    color: gray;
+}
+
 .netInfoPostParamsTable,
 .netInfoPostPartsTable,
 .netInfoPostJSONTable,
