[1.9] Issue 4219: Changing commandline completion with arrow keys doesn't work when hovering over autocompletion popup
http://code.google.com/p/fbug/source/detail?r=12157

--- a/extension/content/firebug/firebug.css
+++ b/extension/content/firebug/firebug.css
@@ -62,7 +62,7 @@ window[chromehidden~="toolbar"] #fbToolbar {
 .completionText {
     color: #666666;
 }
-.completionText[selected="true"] {
+[selected="true"] > .completionText {
     background-color: highlight;
     border-color: highlight;
     color: highlighttext !important;
