--- a/extension/content/firebug/firebug.css
+++ b/extension/content/firebug/firebug.css
@@ -10,10 +10,11 @@ window[chromehidden~="toolbar"] #fbToolbar {
 /* browser.xul styles */
 #fbMainFrame {
     height: 270px;
+    width: 370px;
 }
 
 #fbContentSplitter[dir=reverse]{
-    -moz-transform: scale(-1, -1)
+    -moz-transform: scale(-1, -1);
 }
 
 #fbContentSplitter[orient=vertical] {
