--- a/extension/skin/classic/panel.css
+++ b/extension/skin/classic/panel.css
@@ -5,6 +5,7 @@
 @import "chrome://firebug/skin/console.css";
 @import "chrome://firebug/skin/net.css";
 @import "chrome://firebug/skin/jsonViewer.css";
+@import "chrome://firebug/skin/fontViewer.css";
 @import "chrome://firebug/skin/html.css";
 @import "chrome://firebug/skin/css.css";
 @import "chrome://firebug/skin/debugger.css";
@@ -14,4 +15,3 @@
 @import "chrome://firebug/skin/dom.css";
 @import "chrome://firebug/skin/tableRep.css";
 @import "chrome://firebug-os/skin/panel.css";
-
