[1.9] Hiding the display of a category must also have influence on requests coming from BFCache. This was a mistake by r12141.
http://code.google.com/p/fbug/source/detail?r=12226

--- a/extension/skin/classic/net.css
+++ b/extension/skin/classic/net.css
@@ -16,7 +16,7 @@
 .hideCategory-media .category-media,
 .hideCategory-txt .category-txt,
 .hideCategory-bin .category-bin {
-    display: none;
+    display: none!important;
 }
 
 /************************************************************************************************/
