[1.9] Error indicator shouldn't be selectable
http://code.google.com/p/fbug/source/detail?r=12253

--- a/extension/skin/classic/console.css
+++ b/extension/skin/classic/console.css
@@ -217,7 +217,7 @@
 }
 
 .errorColPosition {
-    cursor: pointer;
+    -moz-user-select: none;
     font-family: monospace;
     color: DarkGreen;
     display: inline-block;
