--- a/extension/skin/classic/css.css
+++ b/extension/skin/classic/css.css
@@ -44,7 +44,8 @@
     color: DarkBlue;
 }
 
-.cssOverridden {
+.cssOverridden > .cssPropName,
+.cssOverridden > .cssPropValue {
     text-decoration: line-through;
 }
 
