--- a/extension/skin/classic/mac/panel.css
+++ b/extension/skin/classic/mac/panel.css
@@ -140,17 +140,17 @@ body {
 }
 
 .closeButton {
-    width: 16px;
-    height: 16px;
+    width: 13px;
+    height: 13px;
     background: url(chrome://firebug/skin/mac/close.png) no-repeat 0 0;
 }
 
 .closeButton:hover {
-    background-image: url(chrome://firebug/skin/mac/closeHover.png);
+    background-position: 0 -13px;
 }
 
 .closeButton:hover:active {
-    background-image: url(chrome://firebug/skin/mac/closeActive.png);
+    background-position: 0 -26px;
 }
 
 /************************************************************************************************/
