[1.9] Issue 5060: Red breakpoint icon in script tab is cut at the bottom
http://code.google.com/p/fbug/source/detail?r=12538

--- a/extension/skin/classic/mac/debugger.css
+++ b/extension/skin/classic/mac/debugger.css
@@ -5,6 +5,7 @@
 
     /* Do not use Monaco, otherwise the Script panel's viewport doesn't work*/
     font-family: monospace;
+    font-size: 12px;  /* Issue 5060 */
 }
 
 /************************************************************************************************/
