[1.9] Yet styles for issue 5062
http://code.google.com/p/fbug/source/detail?r=12541

--- a/extension/skin/classic/console.css
+++ b/extension/skin/classic/console.css
@@ -421,6 +421,13 @@
     font-weight: normal;
 }
 
+.objectLink-regexp > .regexpSource {
+    padding-right: 4px;
+    font-weight: normal;
+    font-family: Monaco, monospace;
+}
+
+
 /************************************************************************************************/
 
 .objectLink-NamedNodeMap .nodeName,
