[1.10] Show text cursor when hovering the new watch expression field.
http://code.google.com/p/fbug/source/detail?r=12676

--- a/extension/skin/classic/dom.css
+++ b/extension/skin/classic/dom.css
@@ -145,6 +145,7 @@
     border-bottom: 1px solid #BEBEBE;
     color: #666666;
     line-height: 14px;
+    cursor: text;
 }
 
 .editor-watchNewRow,
