[1.10] Issue 4934: Auto-completion should work even in the Watch panel
http://code.google.com/p/fbug/source/detail?r=12723

--- a/extension/skin/classic/dom.css
+++ b/extension/skin/classic/dom.css
@@ -182,6 +182,11 @@
     border-bottom: 1px solid #BEBEBE;
 }
 
+.domCompletionBox {
+    color: silver;
+    -moz-box-shadow: none;
+}
+
 /* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */
 
 .watchToolbox {
