[1.10][&1.9] Issue 3816: Can't copy console messages containing line breaks
http://code.google.com/p/fbug/source/detail?r=12736

--- a/extension/skin/classic/console.css
+++ b/extension/skin/classic/console.css
@@ -113,6 +113,11 @@
 
 /*****************************************************************************************/
 
+.objectBox {
+    display: inline;
+    white-space: normal;
+}
+
 .objectBox-string,
 .objectBox-text,
 .objectBox-number,
