--- a/extension/skin/classic/console.css
+++ b/extension/skin/classic/console.css
@@ -113,7 +113,7 @@
 
 /*****************************************************************************************/
 
-.objectBox {
+.inline {
     display: inline;
     white-space: normal;
 }
